[gd_scene format=3 uid="uid://itempopup123"]

[ext_resource type="Script" path="res://scenes/components/ItemDetailsPopup.gd" id="1_script"]

[node name="ItemDetailsPopup" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Header" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Icon" type="TextureRect" parent="Margin/VBox/Header"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="Info" type="VBoxContainer" parent="Margin/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="NameLabel" type="Label" parent="Margin/VBox/Header/Info"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Item Name"
horizontal_alignment = 0
autowrap_mode = 3

[node name="RarityLabel" type="Label" parent="Margin/VBox/Header/Info"]
unique_name_in_owner = true
layout_mode = 2
text = "Rarity - Level 1"
horizontal_alignment = 0

[node name="HSeparator" type="HSeparator" parent="Margin/VBox"]
layout_mode = 2

[node name="StatsScroll" type="ScrollContainer" parent="Margin/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="StatsBox" type="VBoxContainer" parent="Margin/VBox/StatsScroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="HSeparator2" type="HSeparator" parent="Margin/VBox"]
layout_mode = 2

[node name="Actions" type="GridContainer" parent="Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
columns = 2
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15

[node name="UpgradeBtn" type="Button" parent="Margin/VBox/Actions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Upgrade"

[node name="RecycleBtn" type="Button" parent="Margin/VBox/Actions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Recycle"

[node name="EquipBtn" type="Button" parent="Margin/VBox/Actions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Equip"

[node name="CloseBtn" type="Button" parent="Margin/VBox/Actions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Close"
